# iptables-analyzer

./: .gitignore  PROJECT_STATUS.md  README.md  build.py  pyproject.toml
.cursor/rules/: shell.mdc
config/: default.yaml
doc/: Linux iptables_ipvs 数据包流向分析工具开发报告 (2).md  iptables-ipvs-analyzer-architecture.md
src/data_access/: __init__.py  iptables_adapter.py  nftables_dao.py
src/demo/: __init__.py  cli_demo.py
src/engine/: __init__.py  connection_manager.py  matching_engine.py
src/infrastructure/: config.py  error_handler.py  logger.py
src/interfaces/cli/: main.py
src/models/: nat_models.py  rule_models.py  traffic_models.py
src/processors/: __init__.py  base_processor.py  filter_processor.py  mangle_processor.py  nat_processor.py  raw_processor.py
src/services/: __init__.py  parser_service.py
src/utils/: error_handlers.py  format_utils.py  ip_utils.py
tests/unit/: test_models.py  test_utils.py
tmp/: tmp.json
